Rewrite release documentation around a newcomer-first workflow (#141)
* Rewrite release documentation for newcomers

- replace the whole-bucket first run with a small public prefix
- separate the full-scale demonstration and record its provenance
- clarify live-listing consistency, cost, supported backends, output, and resume
- align roadmap, contributor guidance, release notes, and args_hash documentation
- add documentation command, link-target, and wording regression tests
- move recovered working notes into the maintained notes hierarchy

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Use lowercase swath and restore listing-led positioning

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Use lowercase swath in contributor docs

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Use lowercase swath in contributor docs

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Use lowercase swath in roadmap

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Use lowercase swath in documentation index

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Use lowercase swath in FAQ

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Use lowercase swath in full-scale demo

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Use lowercase swath in getting started

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Use lowercase swath in installation guide

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Use lowercase swath in operating guide

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Use lowercase swath in release notes

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Codify lowercase swath project naming

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Use lowercase swath in usage guide

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Use lowercase swath in notes index

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Align documentation smoke tests with listing-led tagline

Signed-off-by: Sagi Bashari <sagi@varve.io>

* Guard lowercase swath naming in entry-point docs

Signed-off-by: Sagi Bashari <sagi@va